--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -64,7 +64,7 @@
 
                             <TextView
                                 android:id="@+id/fechaLbl"
-                                android:layout_width="130dp"
+                                android:layout_width="110dp"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/avenirnextregular"
                                 android:text="Fecha:"
@@ -100,7 +100,7 @@
 
                             <TextView
                                 android:id="@+id/diaLbl"
-                                android:layout_width="130dp"
+                                android:layout_width="110dp"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/avenirnextregular"
                                 android:text="Dia"
@@ -157,7 +157,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="130dp"
+                            android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Tipo:"
@@ -185,7 +185,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="130dp"
+                            android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Negocio:"
@@ -213,7 +213,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="130dp"
+                            android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Estado:"
@@ -241,7 +241,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="130dp"
+                            android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Municipio:"
@@ -269,13 +269,13 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="130dp"
+                            android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Barrio/ Urb./ Zona:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/barrio"
@@ -1016,6 +1016,34 @@
     </ScrollView>
 
     <LinearLayout
+        android:id="@+id/bottomActionsCart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/cart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/semiround_gold_solid"
+            android:fontFamily="@font/poppins_bold"
+            android:padding="0dp"
+            android:text="GUARDAR/ EDITAR PRODUCTOS"
+            android:textColor="@android:color/white"
+            android:textSize="12sp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/bottomActions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -1023,6 +1051,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <Button
